# grimoire

./: README.md
cpp/: CMakeLists.txt  README.md  fp_either.cpp  fp_either_match.cpp  fp_optional_bind.cpp  fp_pattern_matching.cpp  polymorphism_runtime.cpp  polymorphism_static_crtp.cpp
git/: README.md  submodule_to_subtree.sh
pandoc-slides/: README.md  slides.md
video/: README.md
